able to display a task on the calendar grid. Now have to figure out how to avoid overlapping

--- a/src/calendar/calendar.css
+++ b/src/calendar/calendar.css
@@ -29,10 +29,10 @@
 .timelineContainer{
     width: 80px;
     background-color: rgb(171, 171, 171);
-    height: 100vh;
+    height: 100%;
     grid-area: timeline;
     display: grid;
-    grid-template-rows: repeat(23,1fr);
+    grid-template-rows: repeat(23,50px);
     border: 1px solid black;
 }
 
@@ -58,7 +58,7 @@
     justify-content: center;
     align-items: center;
 }
-
+/* 
 .taskRow{
     display:flex;
     background-color: pink;
@@ -67,19 +67,49 @@
     border: 1px solid black;
     width: 100%;
     justify-content: space-between;
-}
+} */
 
 
-.task{
+.taskCol{
     background-color: rgb(215, 215, 215);
     border: 1px solid black;
     border-style:dashed;
-    width: 100%;
+    width: 150px;
     height: 100%;
-    
+    background-color: pink;
+    display: flex;
+    flex-direction: column;    
 }
 
+.task{
+    border: 1px solid black;
+    background-color: purple;
+    height: 50px;
+}
 
+.taskColor{
+    background-color: grey;
+    border: 1px solid red;
+    height: 100%;
+}
+
+.taskCol {
+    position: relative; 
+    width: 150px;
+    height: 100%;
+    background-color: pink;
+}
+
+.event {
+    position: absolute;
+    left: 10px; 
+    right: 10px; 
+    background-color: lightsalmon;
+    border: 1px solid red;
+    padding: 5px;
+    box-sizing: border-box;
+}
+/* 
 .taskGrid{
     grid-area: tasks;
     display: grid;
@@ -87,4 +117,4 @@
     grid-template-columns: repeat(7,1fr);
     grid-template-rows: repeat(23,1fr);
     height: 100%;
-} 
+}  */
